# reactive-english

./: .dockerignore  .gitignore  Dockerfile  README.md  cabal.project  package-lock.json  package.json
.github/workflows/: deploy-cloud-run.yml  deploy-gcp.yml
backend/: reactive-english.cabal
backend/app/: Main.hs
backend/src/ReactiveEnglish/: Api.hs  App.hs  Auth.hs  Config.hs  Curriculum.hs  Database.hs  Db.hs  Service.hs  Static.hs
backend/src/ReactiveEnglish/Domain/: Placement.hs  Rules.hs  Vocabulary.hs
backend/src/ReactiveEnglish/Schema/: Generated.hs
backend/test/: Main.hs
curriculum/: README.md  english-a2.json  english-cefr-c2.json
docs/: deployment-gcp.md
frontend/: package-lock.json  package.json  spago.yaml
frontend/public/: index.html  styles.css
frontend/scripts/: postbuild.mjs
frontend/src/: Main.purs
frontend/src/App/: Fixtures.purs  Http.js  Http.purs  Model.purs  Runtime.purs  UiAction.purs  View.purs
frontend/src/App/Runtime/: Browser.js  Browser.purs
frontend/src/App/Schema/: Generated.purs
frontend/src/Reactive/Banana/: Behavior.purs  Event.purs  Network.purs
frontend/src/ReactiveEnglish/Frp/: Behavior.purs  Event.purs  Network.purs
frontend/test/: Test.Main.purs
frontend/test/App/: Model.purs  UiAction.purs
frontend/test/Reactive/Banana/: Test.purs
frontend/test/ReactiveEnglish/Frp/: Test.purs
infra/terraform/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
learning/visual/: README.md  app.js  index.html  styles.css
learning/visual/assets/: generated-system-hero.prompt.txt
proof/: README.md  ReactiveEnglishProof.lean  lake-manifest.json  lakefile.toml
proof/ReactiveEnglishProof/: Rules.lean
schema-bridge/: schema-bridge.cabal
schema-bridge/app/: Main.hs
schema-bridge/src/SchemaBridge/: Generator.hs  Spec.hs
scripts/: build-proofs.sh  dev.sh  generate-curriculum.mjs  setup-local-lean.sh  setup-local-zlib.sh  start-app.sh  start-learning.sh  with-local-lean.sh  with-local-zlib.sh
