cabal-version:      3.0
name:               schema-bridge
version:            0.1.0.0
build-type:         Simple

executable schema-bridge
  main-is:             Main.hs
  hs-source-dirs:      app, src
  other-modules:
      SchemaBridge.Generator
    , SchemaBridge.Spec
  default-language:    GHC2021
  build-depends:
      base >=4.18 && <5
    , directory
    , filepath
